# ansible-nvim

./: .ansible-lint  .gitignore  AGENTS.md  CHANGELOG.md  README.md  playbook.yml  pyproject.toml
.ansible/roles/: jahrik.nvim
.devcontainer/: devcontainer.json
.github/workflows/: cicd.yml
defaults/: main.yml
docs/: keybindings.md  plugins.md  workflows.md
files/: init.lua
files/after/plugin/: barbar.lua  colors.lua  filetype.lua  lsp.lua  nvimtree.lua  telescope.lua  test.lua  treesitter.lua
files/lua/conf/: plugins.lua  remap.lua  set.lua
files/lua/core/: keymaps.lua  lazy.lua  options.lua
files/lua/plugins/: blink.lua  codecompanion.lua  colorscheme.lua  conform.lua  copilot.lua  csvview.lua  dadbod.lua  dap.lua  gitsigns.lua  iron.lua  lazygit.lua  lint.lua  lsp.lua  mini.lua  neo-tree.lua  neotest.lua  overseer.lua  render-markdown.lua  telescope.lua  treesitter.lua  trouble.lua  venv_selector.lua  which_key.lua
handlers/: main.yml
meta/: argument_specs.yml  main.yml
molecule/default/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/localhost/: converge.yml  molecule.yml  verify.yml
molecule/macos/: molecule.yml
molecule/steamdeck/: molecule.yml  prepare.yml  verify.yml
molecule/vagrant/: converge.yml  molecule.yml  verify.yml
tasks/: Debian.yml  archlinux.yml  darwin.yml  debian.yml  install.yml  main.yml  steamdeck.yml  uninstall.yml
templates/: init.vim.j2
templates/init.d/: 00.Init.vim.j2  01.Keys.vim.j2  02.Plug.vim.j2  30.Coc.vim.j2  99.Theme.vim.j2
templates/lua/: plugins.lua.j2
(+6 files in other folders)
