[project]
name = "ansible-nvim"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "molecule>=26.4.0",
    "molecule-plugins[docker]>=25.8.12",
]

[dependency-groups]
dev = [
    "molecule",
    "molecule-plugins[docker]",
    "ansible-core",
    "docker",
    "ansible-lint",
]
